--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^4.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-masonry-component": "^6.2.1",
+    "shuffle-array": "^1.0.1",
     "yandex-map-react": "^1.0.0"
   }
 }
