--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-masonry-component": "^6.2.1",
-    "react-resize-listener": "^0.3.6",
+    "react-resize-aware": "^2.7.1",
     "shuffle-array": "^1.0.1",
     "yandex-map-react": "^1.0.0"
   }
